--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -62,7 +62,7 @@
             </div>
         {% endif %}
         <div class="inner">
-            <form method="post" action="#" onsubmit="return check()">
+            <form method="post" action="{% url 'signup' %}">
                 {% csrf_token %}
                 <table cellpadding="5" cellspacing="0" border="0" width="100%">
                     <tbody>
@@ -119,7 +119,7 @@
 
                     <tr>
                         <td width="120" align="right"></td>
-                        <td width="auto" align="left"><input type="submit" class="btn btn-sm btn-secondary" value="注册" onclick="return check()">
+                        <td width="auto" align="left"><input type="submit" class="btn btn-sm btn-secondary" value="注册">
                         </td>
                     </tr>
                     </tbody>
@@ -239,18 +239,6 @@
                 })
             }
 
-            function check() {
-                check_username();
-                check_pwd();
-                check_email();
-                check_mobile();
-                if (error_name == false && error_password == false && error_email == false && error_mobile == false && error_sms_code == false) {
-                    return true;
-                }
-                else {
-                    return false;
-                }
-            }
 
         })
     </script>
